--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <nav class="center">
+    <nav class="center topnav-container">
       <img src="./img/main-logo.svg" alt="simple scanner logo" />
       <div class="links-container">
         <a href="#features">Features</a>
@@ -30,10 +30,7 @@
     <div class="container center">
       <section id="features" data-label="features">
         <div class="hero-text">
-          <h1>
-            Protect Yourself. <br />
-            It's Simple.
-          </h1>
+          <h1>Protect Yourself. It's Simple.</h1>
           <p>No-frills scanner that does what it needs to do</p>
         </div>
       </section>
