added responsiveness & background colors

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
     <link rel="stylesheet" href="./styles.css" />
   </head>
-
+  <!-- <--!Side Scrolling on mobile caused by pricing containers-->
   <body>
+    <span class="circle1"></span>
+
+    <span class="circle3"></span>
     <section id="features" data-label="features" class="main">
       <nav class="topnav">
         <img src="./img/main-logo.svg" alt="simple scanner logo" />
@@ -35,8 +38,9 @@
         </div>
         <!-- <button>Free Trial</button> -->
       </nav>
-      <div class="maxw">
-        <h1>
+      <div class="maxw relative">
+        <span class="circle2"></span>
+        <h1 class="hero-text">
           Protect Yourself.<br />
           It's Simple.
         </h1>
