--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <body>
     <span class="circle1"></span>
 
-    <span class="circle3"></span>
     <section id="features" data-label="features" class="main">
       <nav class="topnav">
         <img src="./img/main-logo.svg" alt="simple scanner logo" />
@@ -49,6 +48,7 @@
     </section>
 
     <section id="demo" class="demo maxw main" data-label="demo">
+      <span class="circle3"></span>
       <div class="demo-col1">
         <h2>Reports Sent Straight to your inbox</h2>
         <img src="./img/screenshot.svg" />
@@ -70,13 +70,13 @@
           <h2><span>$</span>15</h2>
           <p>/month</p>
           <p>billed monthly</p>
-          <!-- <button>Free Trial</button> -->
+          <button>Sign Up</button>
         </div>
         <div class="price">
           <h2><span>$</span>12.50</h2>
           <p>/month</p>
           <p>billed annually</p>
-          <!-- <button>Free Trial</button> -->
+          <button>Sign Up</button>
         </div>
       </div>
     </section>
