worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <!-- <--!Side Scrolling on mobile caused by pricing containers-->
   <body>
-    <span class="circle1"></span>
+    <span class="circle1 circle"></span>
 
     <section id="features" data-label="features" class="main">
       <nav class="topnav">
@@ -38,7 +38,7 @@
         <!-- <button>Free Trial</button> -->
       </nav>
       <div class="maxw relative">
-        <span class="circle2"></span>
+        <span class="circle2 circle"></span>
         <h1 class="hero-text">
           Protect Yourself.<br />
           It's Simple.
@@ -48,7 +48,7 @@
     </section>
 
     <section id="demo" class="demo maxw main" data-label="demo">
-      <span class="circle3"></span>
+      <span class="circle3 circle"></span>
       <div class="demo-col1">
         <h2>Reports Sent Straight to your inbox</h2>
         <img src="./img/screenshot.svg" />
@@ -63,7 +63,8 @@
       </div>
     </section>
 
-    <section id="pricing" data-label="pricing" class="main">
+    <section id="pricing" data-label="pricing" class="main relative">
+      <span class="circle4 circle"></span>
       <h2>We're straight to the point with our pricing</h2>
       <div class="pricing-container">
         <div class="price">
@@ -81,7 +82,9 @@
       </div>
     </section>
 
-    <section id="team" class="team" data-label="team">
+    <section id="team" class="team relative" data-label="team">
+      <span class="circle circle5"></span>
+      <span class="circle circle6"></span>
       <div class="main">
         <h2 class="team-header">A one man team that cares about your safety</h2>
         <div class="team-container">
