added new timeline

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,14 +9,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <!-- <--!Side Scrolling on mobile caused by pricing containers-->
+
   <body>
     <span class="circle1 circle"></span>
 
@@ -54,13 +53,23 @@
         <img src="./img/screenshot.svg" />
       </div>
 
-      <div class="demo-col2">
-        <p>Zero Login</p>
-        <p>No password to memorize</p>
-        <p>simple User Experience</p>
-        <p>Email Based Settings Control</p>
-        <p>Emailed Security Reports</p>
-      </div>
+      <ul class="app-features">
+        <li>
+          <div class="feature">Zero Login</div>
+        </li>
+        <li>
+          <div class="feature">No password to memorize</div>
+        </li>
+        <li>
+          <div class="feature">simple User Experience</div>
+        </li>
+        <li>
+          <div class="feature">Email-Based Settings Control</div>
+        </li>
+        <li>
+          <div class="feature">Emailed Security Reports</div>
+        </li>
+      </ul>
     </section>
 
     <section id="pricing" data-label="pricing" class="main relative">
@@ -121,4 +130,5 @@
 
     <script src="./app.js"></script>
   </body>
+
 </html>
