added responsiveness to team section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +8,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="./styles.css" />
   </head>
@@ -124,11 +126,10 @@
           <a>Privacy Policy</a>
         </div>
         <img src="./img/footer-logo.svg" />
-        <p>© 2022 Simple Scanner</p>
+        <p class="copyright">© <span id="year"></span> Simple Scanner</p>
       </footer>
     </section>
 
     <script src="./app.js"></script>
   </body>
-
 </html>
