started contact page

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
       <footer>
         <div class="footer-links">
-          <a>Contact</a>
+          <a href="/contact.html">Contact</a>
           <a>Privacy Policy</a>
         </div>
         <img src="./img/footer-logo.svg" />
