--- a/contact.html
+++ b/contact.html
@@ -18,42 +18,38 @@
   <body class="contactPage">
     <nav class="navbar">
       <img src="./img/main-logo.svg" alt="simple scanner logo" />
-      <a href="index.html">Home</a>
+      <a href="/">Home</a>
     </nav>
     <div class="contact">
       <h1 class="contact__title">Contact Form</h1>
       <form class="contact__form">
-        <div class="form__row">
-          <label>Name:</label>
-          <input
-            class="form__input"
-            type="text"
-            id="name"
-            placeholder="Your Name"
-            required
-          />
-        </div>
+        <label>Name:</label>
+        <input
+          class="form__input"
+          type="text"
+          id="name"
+          placeholder="Your Name"
+          required
+        />
 
-        <div class="form__row">
-          <label>Email:</label>
-          <input
-            class="form__input"
-            type="email"
-            id="email"
-            placeholder="Your Email"
-            required
-          />
-        </div>
+        <label>Email:</label>
+        <input
+          class="form__input"
+          type="email"
+          id="email"
+          placeholder="Your Email"
+          required
+        />
 
-        <label>Summary</label>
+        <label>summary:</label>
         <textarea
           id="summary"
           name="summary"
+          rows="4"
           placeholder="Details..."
           required
         ></textarea>
 
-        <!-- Name, Email, Comment, Question, Concern -->
         <input type="submit" value="submit" class="form__submit" />
       </form>
     </div>
