--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="feature">No password to memorize</div>
         </li>
         <li>
-          <div class="feature">simple User Experience</div>
+          <div class="feature">Simple User Experience</div>
         </li>
         <li>
           <div class="feature">Email-Based Settings Control</div>
