--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,11 +8,17 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="./styles.css" />
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <!-- <--!Side Scrolling on mobile caused by pricing containers-->
 
@@ -31,8 +36,8 @@
           </div>
           <div class="topnav__links">
             <a href="#features" class="topnav__link">Features</a>
-            <a href="#pricing" class="topnav__link">Pricing</a>
             <a href="#demo" class="topnav__link">Demo</a>
+            <a href="#pricing" class="topnav__link">Pricing</a>
             <a href="#team" class="topnav__link">Team</a>
           </div>
         </div>
@@ -132,5 +137,4 @@
 
     <script src="./app.js"></script>
   </body>
-
 </html>
