--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <span class="circle1 circle"></span>
 
-    <section id="features" data-label="features" class="main">
+    <section id="features" data-label="features" class="main features">
       <nav class="topnav">
         <img src="./img/main-logo.svg" alt="simple scanner logo" />
         <div class="topnav__links-container">
@@ -45,7 +45,7 @@
       </nav>
       <div class="maxw relative">
         <span class="circle2 circle"></span>
-        <h1 class="hero-text">
+        <h1>
           Protect Yourself.<br />
           It's Simple.
         </h1>
