--- a/index.html
+++ b/index.html
@@ -124,12 +124,15 @@
       </div>
 
       <footer>
-        <div class="footer-links">
-          <a href="/contact.html">Contact</a>
-          <a>Privacy Policy</a>
+        <div class="main footer-content">
+
+          <div class="footer-links">
+            <a href="/contact.html">Contact</a>
+            <a>Privacy Policy</a>
+          </div>
+          <img src="./img/footer-logo.svg" />
+          <p class="copyright">© <span id="year"></span> Simple Scanner</p>
         </div>
-        <img src="./img/footer-logo.svg" />
-        <p class="copyright">© <span id="year"></span> Simple Scanner</p>
       </footer>
     </section>
 
