--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   </head>
   <!-- <--!Side Scrolling on mobile caused by pricing containers-->
 
-  <body>
+  <body class="body-index">
     <span class="circle1 circle"></span>
 
     <section id="features" data-label="features" class="main">
       <nav class="topnav">
-        <img src="./img/main-logo.svg" alt="simple scanner logo" />
+        <img src="./img/logo.svg" alt="simple scanner logo" />
         <div class="topnav__links-container">
           <div class="hamburger">
             <div class="bar"></div>
@@ -125,7 +125,6 @@
 
       <footer>
         <div class="main footer-content">
-
           <div class="footer-links">
             <a href="/contact.html">Contact</a>
             <a>Privacy Policy</a>
