--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/img/favicon.svg" />
 
     <link rel="stylesheet" href="./styles.css" />
     <script
@@ -26,7 +27,10 @@
 
     <section id="features" data-label="features" class="main features">
       <nav class="topnav">
-        <img src="./img/logo.svg" alt="simple scanner logo" />
+        <a href="/">
+          <img src="./img/logo.svg" alt="simple scanner logo" />
+        </a>
+
         <div class="topnav__links-container">
           <div class="hamburger">
             <div class="bar"></div>
