--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,18 +9,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap" rel="stylesheet" />
     <link rel="icon" href="/img/favicon.svg" />
 
     <link rel="stylesheet" href="./styles.css" />
-    <script
-      src="https://code.jquery.com/jquery-3.6.4.min.js"
-      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
   </head>
 
   <body class="body-index">
@@ -82,12 +77,7 @@
       </ul>
     </section>
 
-    <section
-      id="pricing"
-      class="pricing-section"
-      data-label="pricing"
-      class="main relative"
-    >
+    <section id="pricing" class="pricing-section main" data-label="pricing" class="main relative">
       <span class="circle4 circle"></span>
       <h2>We're straight to the point with our pricing</h2>
       <div class="pricing-container">
@@ -149,4 +139,5 @@
 
     <script src="./app.js"></script>
   </body>
+
 </html>
