--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section id="features" data-label="features" class="main features">
       <nav class="topnav">
-        <a href="/">
+        <a href="/" class="topnav__logo-link">
           <img src="./img/logo.svg" alt="simple scanner logo" />
         </a>
 
