--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,16 +8,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Titillium+Web&display=swap" rel="stylesheet" />
     <title>Contact</title>
-    <script
-      src="https://code.jquery.com/jquery-3.6.4.min.js"
-      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="img/favicon.svg" />
   </head>
@@ -26,7 +21,7 @@
 
     <div id="features" data-label="features" class="main">
       <nav class="topnav">
-        <a href="/">
+        <a href="/" class="topnav__logo-link">
           <img src="./img/logo.svg" alt="simple scanner logo" />
         </a>
         <div class="topnav__links-container">
@@ -47,31 +42,13 @@
         <h2 class="contact__title">Contact Us</h2>
         <form class="contact__form">
           <label>Name </label>
-          <input
-            class="form__input"
-            type="text"
-            id="name"
-            placeholder="Your Name"
-            required
-          />
+          <input class="form__input" type="text" id="name" placeholder="Your Name" required />
 
           <label>Email </label>
-          <input
-            class="form__input"
-            type="email"
-            id="email"
-            placeholder="Your Email"
-            required
-          />
+          <input class="form__input" type="email" id="email" placeholder="Your Email" required />
 
           <label>Summary </label>
-          <textarea
-            id="summary"
-            name="summary"
-            rows="4"
-            placeholder="Details..."
-            required
-          ></textarea>
+          <textarea id="summary" name="summary" rows="4" placeholder="Details..." required></textarea>
 
           <input type="submit" value="submit" class="form__submit" />
         </form>
@@ -89,4 +66,5 @@
     </footer>
     <script src="./app.js"></script>
   </body>
+
 </html>
